* update devtools to 20220207-2.1

--- a/devtools/PKGBUILD
+++ b/devtools/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=devtools
 pkgver=20220207
-pkgrel=2
+pkgrel=2.1
 pkgdesc='Tools for Arch Linux package maintainers'
 arch=(any)
 license=('GPL')
@@ -15,7 +15,8 @@ makedepends=('asciidoc')
 optdepends=('btrfs-progs: btrfs support')
 source=(${url}/uploads/1b4a7f5876d24a4d26370f4f81d8f636/devtools-${pkgver}.tar.gz
         ${url}/uploads/070f070114e57b8111f0afe72f2c1585/devtools-${pkgver}.tar.gz.sig
-        makepkg.conf-set-LTOFLAGS-flto-auto.patch)
+        makepkg.conf-set-LTOFLAGS-flto-auto.patch
+        lazy-ppc-fix.patch)
 validpgpkeys=('487EACC08557AD082088DABA1EB2638FF56C0C53'
               '4AA4767BBC9C4B1D18AE28B77F2D434B9741E8AC'
               '86CFFCA918CF3AF47147588051E8B148A9999C34'
@@ -27,15 +28,19 @@ validpgpkeys=('487EACC08557AD082088DABA1EB2638FF56C0C53'
               'E240B57E2C4630BA768E2F26FC1B547C8D8172C8')
 sha256sums=('189716b7041057554d6d7ffed0cd05184f5fb03c67c8d12b74b0771df2dbf828'
             'SKIP'
-            '1bd579ad29943b54c3a60b93369c5185bdac670cd01440a3ca7b43f64145230c')
+            '1bd579ad29943b54c3a60b93369c5185bdac670cd01440a3ca7b43f64145230c'
+            '1cd8709065203304ba622544719039110c07a5d3edb80b775c42aa7df41c2eaa')
 b2sums=('334c434868f3769765b8e05cde1b825433322725247d6cb1509993cca980a2f02a55c763b0e4d6bd53988bb4630d86785ccbe636b842e7103c93a43d1036e36f'
         'SKIP'
-        '4eea243b9152c38d1e82f0f6abd02fdbb69c9640fd7bef528532ccb0b978a1f0e39d0e2c985a9bd2dd26d2d8242ecb6b5b7f2085f0c62f521e65d487b7d1452d')
+        '4eea243b9152c38d1e82f0f6abd02fdbb69c9640fd7bef528532ccb0b978a1f0e39d0e2c985a9bd2dd26d2d8242ecb6b5b7f2085f0c62f521e65d487b7d1452d'
+        '3bd38fc2da0fb88da12728d948b0058c68a383957bdd4009176f3ba3827e9ae6492e08dd68ceffa87f6e59d347162410c6f7618986d122d37a065c5835298f96')
 
 prepare() {
   cd ${pkgname}-${pkgver}
   # https://gitlab.archlinux.org/archlinux/devtools/-/merge_requests/92
   patch -Np1 -i ../makepkg.conf-set-LTOFLAGS-flto-auto.patch
+
+  patch -Np0 -i ../lazy-ppc-fix.patch
 }
 
 build() {
