--- a/cross-compilers/aarch64-linux-gnu-gcc-stage1/PKGBUILD
+++ b/cross-compilers/aarch64-linux-gnu-gcc-stage1/PKGBUILD
@@ -13,7 +13,7 @@ _majorver=${pkgver:0:1}
 _islver=0.24
 pkgrel=2
 pkgdesc="The GNU Compiler Collection. Stage 1 for toolchain building (${_target})"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL custom)
 url='http://gcc.gnu.org'
 depends=(${_target}-binutils libmpc zlib)
