--- a/grpc/PKGBUILD
+++ b/grpc/PKGBUILD
@@ -5,26 +5,30 @@
 
 pkgbase='grpc'
 pkgname=('grpc' 'python-grpcio' 'php-grpc' 'php7-grpc' 'grpc-cli')
-pkgver=1.39.1
-_gtestver=c9ccac7cb7345901884aabf5d1a786cfa6e2f397
-pkgrel=1
+pkgver=1.45.2
+_gtestver=0e402173c97aea7a00749e825b194bfede4f2e45
+pkgrel=3
 pkgdesc="High performance, open source, general RPC framework that puts mobile and HTTP/2 first."
 arch=(x86_64 powerpc64le powerpc)
 url='https://grpc.io'
 license=('BSD')
 makedepends=('re2' 're2c' 'protobuf' 'php' 'php7' 'c-ares' 'openssl' 'chrpath' 'cython'
              'cmake' 'benchmark' 'python-setuptools' 'abseil-cpp' 'ninja')
+options=('debug')
+checkdepends=('python-six')
 source=("https://github.com/grpc/grpc/archive/v$pkgver/$pkgbase-$pkgver.tar.gz"
         "https://github.com/google/googletest/archive/$_gtestver/googletest-$_gtestver.tar.gz"
-        "python-grpcio-use-system-abseil.patch")
-sha256sums=('024118069912358e60722a2b7e507e9c3b51eeaeee06e2dd9d95d9c16f6639ec'
-            '443d383db648ebb8e391382c0ab63263b7091d03197f304390baac10f178a468'
-            'f8b9cf84e16ac66d9cb74c954362b037e69ae98a61d16fc1889ad15831bee588')
+        "python-grpcio-use-system-abseil.patch"
+        "python-grpcio-nullptr-fix.patch")
+sha256sums=('e18b16f7976aab9a36c14c38180f042bb0fd196b75c9fd6a20a2b5f934876ad6'
+            'c8de6c60e12ad014a28225c5247ee735861d85cf906df617f6a29954ca05f547'
+            '3cfb289266f9d2697b917e4400f18a6592f95a99e658e401c1332870b219358b'
+            '3d3364a9cd71aae95f683242c7022f6599880b8d6df2472efab755820b2c0f21')
 
 prepare() {
   cd "$srcdir/$pkgbase-$pkgver"
-
   patch -Np1 -i ../python-grpcio-use-system-abseil.patch
+  patch -Np1 -i ../python-grpcio-nullptr-fix.patch
 
   ln -sf "$srcdir/googletest-$_gtestver/"{googlemock,googletest} \
     third_party/googletest
@@ -128,7 +132,7 @@ package_grpc() {
 
 package_python-grpcio() {
   pkgdesc='Python language bindings for grpc, remote procedure call (RPC) framework'
-  depends=('c-ares' 'python' 're2' 'abseil-cpp')
+  depends=('c-ares' 'python' 'python-six' 're2' 'abseil-cpp')
 
   cd "$srcdir/$pkgbase-$pkgver"
   python setup.py install -O1 --skip-build --root="$pkgdir"
