--- a/luajit/PKGBUILD
+++ b/luajit/PKGBUILD
@@ -1,4 +1,5 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
+# Maintainer: Daurnimator <daurnimator@archlinux.org>
 # Maintainer: Lukas Fleischer <lfleischer@archlinux.org>
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 # Contributor: Chris Brannon <chris@the-brannons.com>
@@ -6,35 +7,33 @@
 # Contributor: Anders Bergh <anders1@gmail.com>
 
 pkgname=luajit
-pkgver=2.1.0.beta3
-pkgrel=4
+# LuaJIT has abandoned versioned releases and now advises using git HEAD
+# https://github.com/LuaJIT/LuaJIT/issues/665#issuecomment-784452583
+_commit=20aea93915a0d31138cb00e17cc15eb849e3b806
+pkgver="2.1.0.beta3.r397.g${_commit::8}"
+pkgrel=1
 pkgdesc='Just-in-time compiler and drop-in replacement for Lua 5.1'
 arch=(x86_64 powerpc64le powerpc)
 url='https://luajit.org/'
 license=('MIT')
 depends=('gcc-libs')
-source=("https://luajit.org/download/LuaJIT-${pkgver/\.beta/-beta}.tar.gz"
-	luajit-debian.patch)
-md5sums=('eae40bc29d06ee5e3078f9444fcea39b'
-         '5e833cbc929ca5b237ca75818b644c5a')
-sha256sums=('1ad2e34b111c802f9d0cdf019e986909123237a28c746b21295b63c9e785d9c3'
-            '647107762c99b3e40cd2be50bb64ca0b82bc271562270f88ded55ecdd56b1c9a')
-b2sums=('ac3d12e25bd9946ba41aed6672c66884e7256e6be99d7ee8d1260d697453c966b24d60387f278f47233bad44cda61085c9059e6f62c0bc7cfdaaefde282346c5'
-        'cac4a9dc53db20466b1fd1294ee7e6d8f7e022b09de7b13a8a671fc43ee58ae2453486980909ce0ddaf2472fa3cdca43a744ebe0f09ed483733e9a713b2f9585')
-
-prepare() {
-  cd "LuaJIT-${pkgver/.beta/-beta}"
-  patch -Np1 -i ${srcdir}/luajit-debian.patch
-}
+options=('debug')
+source=("LuaJIT-${_commit}.tar.gz::https://repo.or.cz/luajit-2.0.git/snapshot/${_commit}.tar.gz")
+md5sums=('20e8dfb64c907f5755cd99ebed02df9f')
+sha256sums=('a2190947126306f2d137ae8a6fc6b04f4f1cf6460216f4ee0e208ff95cdd1e35')
+b2sums=('895f07f17f24010bf8f5ed88887dd42660a805b1b243b09047a3b2055813d66986a6095265a9a7f5f28ffccbe92e3c868775029bf71f2be33e2da02cbed886fa')
 
 build() {
-  cd "LuaJIT-${pkgver/.beta/-beta}"
-  make amalg PREFIX=/usr
+  cd "luajit-2.0-${_commit::7}"
+  # Avoid early stripping
+  make amalg PREFIX=/usr BUILDMODE=dynamic TARGET_STRIP=" @:"
 }
 
 package() {
-  cd "LuaJIT-${pkgver/.beta/-beta}"
+  cd "luajit-2.0-${_commit::7}"
 
-  make install DESTDIR="${pkgdir/.beta/-beta}" PREFIX=/usr
-  install -Dm644 COPYRIGHT "${pkgdir/.beta/-beta}/usr/share/licenses/$pkgname/COPYRIGHT"
+  make install DESTDIR="$pkgdir" PREFIX=/usr
+  install -Dm644 COPYRIGHT "$pkgdir/usr/share/licenses/$pkgname/COPYRIGHT"
+
+  ln -sf luajit-2.1.0-beta3 "$pkgdir/usr/bin/luajit"
 }
