--- a/qemu/PKGBUILD
+++ b/qemu/PKGBUILD
@@ -297,6 +297,9 @@ package_qemu-common() {
   depends=(gcc-libs glib2 libglib-2.0.so libgmodule-2.0.so hicolor-icon-theme libcap-ng libcap-ng.so)
   install=$pkgname.install
   options=(!strip)
+  provides=(qemu)
+  conflicts=(qemu)
+  replaces=(qemu)
 
   meson install -C build --destdir "$pkgdir"
 
