--- a/rustup/PKGBUILD
+++ b/rustup/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jon Gjengset <jon@tsp.io>
 pkgname=rustup
 pkgver=1.24.3
-pkgrel=1
+pkgrel=2
 pkgdesc="The Rust toolchain installer"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/rust-lang/rustup.rs"
@@ -13,7 +13,9 @@ depends=('curl' 'xz')
 makedepends=('cargo')
 optdepends=('lldb: rust-lldb script'
             'gdb: rust-gdb script')
-provides=('rust' 'cargo' 'rust-nightly' 'cargo-nightly' 'rustfmt')
+provides=('rust' 'cargo' 'rust-nightly' 'cargo-nightly' 'rustfmt' 'rust-src'
+          'rust-wasm')
+provides_x86_64=('lib32-rust-libs' 'rust-musl')
 conflicts=('rust' 'cargo' 'rustfmt')
 replaces=('cargo-tree')
 install='post.install'
