--- a/zenity/PKGBUILD
+++ b/zenity/PKGBUILD
@@ -1,37 +1,40 @@
-# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=zenity
-pkgver=3.32.0+55+gd7bedff
+pkgver=3.42.1
 pkgrel=1
 pkgdesc="Display graphical dialog boxes from shell scripts"
 url="https://gitlab.gnome.org/GNOME/zenity"
-arch=(x86_64 powerpc64le)
+arch=(x86_64)
 license=(LGPL)
 depends=(webkit2gtk libnotify)
-makedepends=(yelp-tools autoconf-archive git perl)
-_commit=d7bedff683df43df0604f989659df48f096f8c0e  # master
+makedepends=(yelp-tools meson git)
+options=(debug)
+_commit=5aa43ab26e2f2ff5be16daabe15995799ffbaba2  # tags/3.42.1^0
 source=("git+https://gitlab.gnome.org/GNOME/zenity.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
-  cd $pkgname
-  git describe --tags | sed 's/^ZENITY_//;s/_/./g;s/-/+/g'
+  cd zenity
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
-  cd $pkgname
-  NOCONFIGURE=1 ./autogen.sh
+  cd zenity
 }
 
 build() {
-  cd $pkgname
-  ./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var
-  make
+  arch-meson zenity build \
+    -D libnotify=true \
+    -D webkitgtk=true
+  meson compile -C build
+}
+
+check() {
+  meson test -C build --print-errorlogs
 }
 
 package() {
-  cd $pkgname
-  make DESTDIR="$pkgdir" install
+  meson install -C build --destdir "$pkgdir"
 }
