--- a/emacs/PKGBUILD
+++ b/emacs/PKGBUILD
@@ -1,18 +1,49 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Juergen Hoetzel <juergen@archlinux.org>
 # Maintainer: Frederik Schwan <freswa at archlinux dot org>
+# Contributor: Jaroslav Lichtblau <svetlemodry@archlinux.org>
 # Contributor: Renchi Raju <renchi@green.tam.uiuc.edu>
 
 pkgbase=emacs
-pkgname=(emacs emacs-nativecomp)
+pkgname=(emacs emacs-nativecomp emacs-nox)
 pkgver=28.1
-pkgrel=4
+pkgrel=7
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.gnu.org/software/emacs/emacs.html'
 license=('GPL3')
-depends=('librsvg' 'gpm' 'giflib' 'libxpm' 'libotf' 'm17n-lib' 'gtk3'
-          'hicolor-icon-theme' 'desktop-file-utils' 'alsa-lib' 'gnutls'
-          'jansson' 'cairo' 'harfbuzz'
+depends=(
+  gmp
+  gnutls
+  jansson
+  lcms2
+  libacl.so
+  libasound.so
+  libdbus-1.so
+  libfontconfig.so
+  libfreetype.so
+  libgdk-3.so
+  libgdk_pixbuf-2.0.so
+  libgif.so
+  libgio-2.0.so
+  libglib-2.0.so
+  libgobject-2.0.so
+  libgpm.so
+  libgtk-3.so
+  libharfbuzz.so
+  libice
+  libjpeg.so
+  libncursesw.so
+  libotf
+  libpango-1.0.so
+  libpng
+  librsvg-2.so
+  libsm
+  libsystemd.so
+  libtiff.so
+  libxfixes
+  libxml2.so
+  m17n-lib
+  zlib
 )
 makedepends=(libgccjit)
 validpgpkeys=('17E90D521672C04631B1183EE78DAE0F3115E06B')
@@ -23,6 +54,7 @@ b2sums=('42a12bec2dc74f4838ae79b5589fb7439ff415d8ddd34f2ff7a8c503f909ddd4144ad35
 
 prepare() {
   cp -ar ${pkgname}-${pkgver} ${pkgbase}-${pkgver}-nativecomp
+  cp -ar ${pkgname}-${pkgver} ${pkgbase}-${pkgver}-nox
 }
 
 build() {
@@ -32,22 +64,29 @@ build() {
     --localstatedir=/var \
     --with-cairo \
     --with-harfbuzz \
-    --with-modules \
-    --with-wide-int \
-    --with-x-toolkit=gtk3 \
-    --with-xft"
+    --with-libsystemd \
+    --with-modules"
 
   export ac_cv_lib_gif_EGifPutExtensionLast=yes
 
   cd ${pkgname}-${pkgver}
-  ./configure $_confflags
+  ./configure $_confflags \
+    --with-x-toolkit=gtk3
   make
 
   cd ../${pkgbase}-${pkgver}-nativecomp
   ./configure \
+    --with-x-toolkit=gtk3 \
     --with-native-compilation \
     $_confflags
   make NATIVE_FULL_AOT=1 bootstrap
+
+  cd ../${pkgbase}-${pkgver}-nox
+  ./configure \
+    --without-x \
+    --without-sound \
+    $_confflags
+  make
 }
 
 package_emacs() {
@@ -71,6 +110,36 @@ package_emacs-nativecomp() {
   conflicts=(emacs)
 
   cd ${pkgbase}-${pkgver}-nativecomp
+  make DESTDIR="${pkgdir}" install
+
+  # remove conflict with ctags package
+  mv "${pkgdir}"/usr/bin/{ctags,ctags.emacs}
+  mv "${pkgdir}"/usr/share/man/man1/{ctags.1.gz,ctags.emacs.1}
+
+  # fix user/root permissions on usr/share files
+  find "${pkgdir}"/usr/share/emacs/${pkgver} -exec chown root:root {} \;
+}
+
+package_emacs-nox() {
+  pkgdesc='The extensible, customizable, self-documenting real-time display editor without X11 support'
+  depends=(
+    gmp
+    gnutls
+    hicolor-icon-theme
+    jansson
+    lcms2
+    libacl.so
+    libdbus-1.so
+    libgpm.so
+    libncursesw.so
+    libsystemd.so
+    libxml2.so
+    zlib
+  )
+  provides=(emacs)
+  conflicts=(emacs)
+
+  cd ${pkgbase}-${pkgver}-nox
   make DESTDIR="${pkgdir}" install
 
   # remove conflict with ctags package
