--- a/firefox/PKGBUILD
+++ b/firefox/PKGBUILD
@@ -29,9 +29,8 @@ source=(https://archive.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-
         fix-image-format-warning.patch
         flac-no-ffvpx.patch
         avoid-redefinition.patch
-        firefox-pgo.diff
+        firefox-pgo.patch
         riscv.patch
-        hotfix-riscv.patch
         ppc.patch
         Skia-table-titles-fading.patch
         Skia-menu-fonts.patch
@@ -45,9 +44,8 @@ sha256sums=('664c0cc4e0fb70886aa4e652d144996045d533a18eebc7d61093103cbb2d5e7f'
             '958cf5016e9845b6ee6e2ed05ad96cc2fc6f74bebbb338a7b7ce29bffd2be716'
             '944fc690a0b344ea56ff2b0880ba492ba80338a68f31d0fb205b891a5de42cee'
             '3ebba6c6c59dbf754b522d2535c27eae3e724aab575b8e7be9658e0d33183bcf'
-            'bb1e775512137859ee0dd6eaebd4580257f793196fb074c660247d3935ca9148'
+            '7337e2f9d82d7aa0625f442597989aa93e030750d1a7a87098fbf3d3f06bc69c'
             'fab815cd1b67a7580cb58d16d87c48f928f9d4e93f555ea506211bf4c2d4a774'
-            'e89229d4b74c129307627c5707ffbb442387d79b1eb791549343ba49c1ffff69'
             'cea57582d6cd7c34e99226bccafc87dbf7368186a5d76eb0836d4ddbce3bc81f'
             '895129290e71efa359f547552f99259e7e1c3b042c47397e90407942c2f59f24'
             'd2e5974942f161eb43b158968ad8ea3184a9c0527169d0af7ef5e9ac126be0f7'
@@ -68,6 +66,7 @@ _mozilla_api_key=de0473f2-d53f-46da-956c-6aff61bda3ab
 
 prepare() {
   mkdir -p mozbuild
+sudo pacman --noconfirm -R ccache
   cd ${srcdir}/firefox-$pkgver
 
   patch -Np0 -i ${srcdir}/firefox-powerpc-clang.patch
@@ -79,27 +78,14 @@ prepare() {
   patch -Np0 -i ${srcdir}/avoid-redefinition.patch
 
   # Talospace goodness
-  patch -Np1 -i ${srcdir}/firefox-pgo.diff
+  patch -Np1 -i ${srcdir}/firefox-pgo.patch
 
   # sourced from T2 SDE, thanks!
-  patch -Np1 -i ${srcdir}/riscv.patch
-  patch -Np1 -i ${srcdir}/hotfix-riscv.patch
+  #patch -Np1 -i ${srcdir}/riscv.patch
   patch -Np1 -i ${srcdir}/ppc.patch
   patch -Np1 -i ${srcdir}/Skia-table-titles-fading.patch
   patch -Np1 -i ${srcdir}/Skia-menu-fonts.patch
   patch -Np1 -i ${srcdir}/Skia-ConvolutionFilter.patch
-
-
-  case "${CARCH}" in
-    powerpc64le|riscv64)
-      CC=gcc
-      CXX=g++
-      ;;
-    *)
-      CC=clang
-      CXX=clang++
-      ;;
-  esac
 
   sed -i 's/\("files":{\)[^}]*/\1/' third_party/rust/num-traits/.cargo-checksum.json
 
@@ -107,8 +93,6 @@ prepare() {
   echo -n "$_mozilla_api_key" >$srcdir/mozilla-api-key
 
   cat >${srcdir}/mozconfig <<END
-export CC=${CC}
-export CXX=${CXX}
 ac_add_options --enable-application=browser
 
 ac_add_options --prefix=/usr
@@ -117,7 +101,7 @@ ac_add_options --enable-optimize
 ac_add_options --enable-hardening
 ac_add_options --enable-jemalloc
 ac_add_options --enable-linker=bfd
-#ac_add_optioms 	--without-wasm-sandboxed-libraries
+#ac_add_optioms --without-wasm-sandboxed-libraries
 ac_add_options --with-wasi-sysroot=/usr/share/wasi-sysroot
 export LDFLAGS="${LDFLAGS} -Wl,-rpath=/usr/lib/firefox"
 mk_add_options MOZ_MAKE_FLAGS="${MAKEFLAGS}"
@@ -169,8 +153,18 @@ END
 }
 
 build() {
-  sudo pacman --noconfirm -R ccache
   cd firefox-$pkgver
+
+  case "${CARCH}" in
+    powerpc64le|riscv64)
+      export CC=gcc
+      export CXX=g++
+      ;;
+    *)
+      export CC=clang
+      export CXX=clang++
+      ;;
+  esac
 
   export TMPDIR=${srcdir}/.tmp
 
@@ -181,7 +175,7 @@ build() {
   export MOZ_APP_REMOTINGNAME=${pkgname//-/}
   export MOZ_TELEMETRY_REPORTING=1
   export MOZ_REQUIRE_SIGNING=1
-  #export MACH_BUILD_PYTHON_NATIVE_PACKAGE_SOURCE=none
+  #export MACH_BUILD_PYTHON_NATIVE_PACKAGE_SOURCE=system
 
   # LTO needs more open files
   ulimit -n 4096
