--- a/libfabric/PKGBUILD
+++ b/libfabric/PKGBUILD
@@ -2,15 +2,17 @@
 # Maintainer: Bruno Pagani <archange@archlinux.org>
 
 pkgname=libfabric
-pkgver=1.14.1
+pkgver=1.15.0
 pkgrel=1
 pkgdesc="User-space API for OpenFabrics Interfaces (OFI)"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://ofiwg.github.io/libfabric/"
 license=(GPL2)
 depends=(glibc gcc-libs)
+depends_x86_64=(numactl)
+options=(!lto)
 source=(https://github.com/ofiwg/libfabric/releases/download/v${pkgver}/libfabric-${pkgver}.tar.bz2)
-sha512sums=('6ce2863b4dee58648a0aa1108c0f41ea6fc7d610686c3e66d7c3b75d8aa2ee019786a3843ebf652fe31f9945300d32a6b56f447c957abb49d6f7a8a567a39167')
+sha512sums=('c4f855d98eedea412fa11461bde3d498c494b2e121141df3852b08b94e716fec1d7c0e19e366939b639d792f56060e291ff161e433f2a82689484988363fead8')
 
 prepare() {
   cd ${pkgname}-${pkgver}
@@ -18,14 +20,15 @@ prepare() {
 }
 
 build() {
+  cd ${pkgname}-${pkgver}
+
   case "${CARCH}" in
     powerpc)
       export CXXFLAGS+=' -latomic'
       export CFLAGS+=' -latomic'
     ;;
   esac
-			      
-  cd ${pkgname}-${pkgver}
+
   ./configure --prefix=/usr
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
