--- a/pulseaudio/PKGBUILD
+++ b/pulseaudio/PKGBUILD
@@ -5,14 +5,14 @@ pkgbase=pulseaudio
 pkgname=(pulseaudio libpulse pulseaudio-{zeroconf,lirc,jack,bluetooth,equalizer,rtp})
 pkgdesc="A featureful, general-purpose sound server"
 pkgver=15.0
-pkgrel=1
+pkgrel=4
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.freedesktop.org/wiki/Software/PulseAudio/"
 license=(GPL)
 makedepends=(libasyncns libcap attr libxtst libsm libsndfile rtkit libsoxr
              speexdsp tdb systemd dbus avahi bluez bluez-libs jack2 sbc
              lirc openssl fftw orc gtk3 webrtc-audio-processing check git meson
-             xmltoman valgrind doxygen)
+             xmltoman valgrind doxygen gst-plugins-base-libs)
 _commit=6329a2498eb038f8a9537888280a62b00a93f68e  # tags/v15.0^0
 source=("git+https://gitlab.freedesktop.org/pulseaudio/pulseaudio.git#commit=$_commit")
 sha256sums=('SKIP')
@@ -27,6 +27,9 @@ prepare() {
 
   # Freeze version before patching
   ./git-version-gen doesnt-exist >.tarball-version
+
+  # https://bugs.archlinux.org/task/73888
+  git cherry-pick -n 9f0a18b290de3e93812fbb7666f6377acf1e96e7
 }
 
 build() {
@@ -34,7 +37,6 @@ build() {
     -D stream-restore-clear-old-devices=true
     -D pulsedsp-location='/usr/\$LIB/pulseaudio'
     -D udevrulesdir=/usr/lib/udev/rules.d
-    -D bluez5-gstreamer=disabled
     -D elogind=disabled
     -D tcpwrap=disabled
   )
@@ -168,7 +170,9 @@ package_pulseaudio-jack() {
 
 package_pulseaudio-bluetooth() {
   pkgdesc="Bluetooth support for PulseAudio"
-  depends=("pulseaudio=$pkgver-$pkgrel" bluez bluez-libs sbc)
+  depends=("pulseaudio=$pkgver-$pkgrel" bluez bluez-libs sbc
+           gst-plugins-base-libs)
+  optdepends=('gst-plugins-bad: AptX and LDAC support')
 
   mv bluetooth/* "$pkgdir"
 }
