--- a/rtl88x2bu-dkms/PKGBUILD
+++ b/rtl88x2bu-dkms/PKGBUILD
@@ -7,12 +7,12 @@ pkgver=5.6.1.r60.9c6c253
 _pkgver=5.6.1
 pkgrel=1
 pkgdesc="Kernel module for Realtek rtl88x2bu WiFi chipset"
-arch=(powerpc64le)
+arch=(powerpc64le powerpc)
 url="https://github.com/RinCat/RTL88x2BU-Linux-Driver"
 license=('GPL2')
 depends=('dkms' 'bc')
 makedepends=('git')
-_commit="9c6c2539939ff8208df5ba3cf2224fa5173ab49c"
+_commit="a543f246e3f6b023a98f7146cccec667600a23fe"
 source=("git+https://github.com/RinCat/RTL88x2BU-Linux-Driver.git#commit=${_commit}"
 	rtl88x2bu-5.6.1-disable-debug.patch)
 sha512sums=('SKIP'
