--- a/python/python2-numpy/PKGBUILD
+++ b/python/python2-numpy/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=python2-numpy
 pkgver=1.16.6
-pkgrel=1
+pkgrel=2
 pkgdesc="Scientific tools for Python 2"
 arch=(x86_64 powerpc64le powerpc)
 license=('custom')
@@ -27,6 +27,7 @@ prepare() {
 
 build() {
   cd numpy-$pkgver
+  CFLAGS+=" -ffat-lto-objects" \
   python2 setup.py build
 }
 
