--- a/go/nomad/PKGBUILD
+++ b/go/nomad/PKGBUILD
@@ -1,9 +1,10 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: George Rawlinson <grawlinson@archlinux.org>
+# Maintainer: Morten Linderud <foxboron@archlinux.org>
 
 pkgname=nomad
 pkgver=1.2.6
-pkgrel=1
+pkgrel=2
 pkgdesc="A simple and flexible workload orchestrator"
 arch=(x86_64 powerpc64le)
 url="https://www.nomadproject.io"
@@ -14,7 +15,7 @@ optdepends=(
   'docker: for docker driver'
   'java-runtime: for java driver'
   'java-runtime-headless: for java driver - headless'
-  'qemu: for qemu driver'
+  'qemu-headless: for qemu driver'
   'nomad-driver-nspawn: for systemd-nspawn driver'
   'nomad-driver-podman: for podman driver'
   'nomad-driver-lxc: for lxc driver'
