--- a/go/podman/PKGBUILD
+++ b/go/podman/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgbase=podman
 pkgname=(podman podman-docker)
-pkgver=4.0.1
+pkgver=4.0.3
 pkgrel=2
 pkgdesc='Tool and library for running OCI-based containers in pods'
 arch=(x86_64 powerpc64le riscv64)
@@ -14,7 +14,7 @@ license=(Apache)
 makedepends=(apparmor btrfs-progs device-mapper go go-md2man git gpgme libseccomp systemd)
 # https://github.com/containers/podman/issues/13297
 options=(!lto)
-source=("git+$url#tag=v$pkgver?signed")
+source=(git+$url#tag=v$pkgver?signed)
 validpgpkeys=(
   'B7DBDCA456F7335E91F1C25CD3624C551D0515C4'  # Matthew Heon <mheon@redhat.com>
 )
