* update modemmanager to 1.18.8-1

--- a/modemmanager/PKGBUILD
+++ b/modemmanager/PKGBUILD
@@ -4,17 +4,18 @@
 
 pkgbase=modemmanager
 pkgname=(modemmanager libmm-glib)
-pkgver=1.18.6
+pkgver=1.18.8
 pkgrel=1
 pkgdesc="Mobile broadband modem management service"
-arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.freedesktop.org/wiki/Software/ModemManager/"
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL2 LGPL2.1)
 depends=(systemd libgudev polkit ppp libqmi libmbim
          mobile-broadband-provider-info)
 makedepends=(gtk-doc gobject-introspection vala meson git bash-completion)
 checkdepends=(python-gobject python-dbus)
-_commit=a7bcf2036b34d5043dbc33fee7d98bae5859c4d3  # tags/1.18.6
+options=(debug)
+_commit=0d8b5e93fc62eb0f41e18a2d9d845331d7af36ec  # tags/1.18.8^0
 source=("git+https://gitlab.freedesktop.org/mobile-broadband/ModemManager.git#commit=$_commit")
 sha256sums=('SKIP')
 
