* update libindicator to 12.10.1-10.1

--- a/libindicator/PKGBUILD
+++ b/libindicator/PKGBUILD
@@ -9,10 +9,10 @@
 pkgbase=libindicator
 pkgname=("${pkgbase}-gtk"{2,3})
 pkgver=12.10.1
-pkgrel=10
+pkgrel=10.1
 pkgdesc='Set of symbols and convenience functions for Ayatana indicators'
 url='https://launchpad.net/libindicator'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL3')
 makedepends=('gtk2' 'gtk3' 'python')
 source=(https://launchpad.net/${pkgbase}/${pkgver%.*}/${pkgver}/+download/${pkgbase}-${pkgver}.tar.gz{,.asc})
