* update libappindicator to 12.10.0.r296-2.1

--- a/libappindicator/PKGBUILD
+++ b/libappindicator/PKGBUILD
@@ -12,10 +12,10 @@ pkgname=("${pkgbase}-gtk"{2,3})
 _bzrtag=12.10.0
 _bzrrev=296
 pkgver=${_bzrtag}.r${_bzrrev}
-pkgrel=2
+pkgrel=2.1
 pkgdesc='Allow applications to extend a menu via Ayatana indicators in Unity, KDE or Systray'
 url='https://launchpad.net/libappindicator'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('LGPL2.1' 'LGPL3')
 makedepends=('bzr' 'dbus-glib' 'gnome-common' 'gobject-introspection' 'gtk-doc' 'libdbusmenu-gtk'{2,3} 'libindicator-gtk'{2,3} 'vala')
 options=('!emptydirs')
