* update linux-visionfive to 1:5.18.rc8-1

--- a/riscv64/linux-visionfive/PKGBUILD
+++ b/riscv64/linux-visionfive/PKGBUILD
@@ -1,10 +1,10 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 pkgbase=linux-visionfive
-pkgver=5.17
+pkgver=5.18.rc8
 pkgrel=1
 epoch=1
 pkgdesc='Linux kernel for the StarFive VisionFive V1'
-_commit="243ce759ed5821edf38bf93ce7325e232b805547"
+_commit="620eccad9483836109976b7f2f117f8923e7fd8b"
 url="https://git.archlinux.org/linux.git/log/?h=$_srctag"
 arch=(any)
 license=(GPL2)
@@ -24,7 +24,7 @@ validpgpkeys=(
   'C7E7849466FE2358343588377258734B41C31549'  # David Runge <dvzrv@archlinux.org>
 )
 sha256sums=('SKIP'
-            '011ade0cbc4303fc669aee384a559d3f5d62b13f6dfdb9aa9508fe188fe133c0')
+            'eb7a7d06409ba6dd96669fb58b15482e76261738706630062eee3b4788b1b1e3')
 
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
