--- a/opencv/PKGBUILD
+++ b/opencv/PKGBUILD
@@ -7,13 +7,14 @@ pkgbase=opencv
 pkgname=(opencv opencv-samples python-opencv)
 [ "${CARCH}" = 'x86_64' ] && pkgname+=(opencv-cuda)
 pkgver=4.5.5
-pkgrel=2
+pkgrel=5
 pkgdesc='Open Source Computer Vision Library'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(BSD)
 url='https://opencv.org/'
-depends=(tbb openexr gst-plugins-base libdc1394 cblas lapack libgphoto2 openjpeg2 ffmpeg protobuf)
-makedepends=(cmake python-numpy python-setuptools mesa eigen hdf5 lapacke qt5-base vtk glew ant java-environment pugixml openmpi fmt)
+depends=(tbb openexr gst-plugins-base libdc1394 cblas lapack libgphoto2 openjpeg2 ffmpeg4.4 protobuf)
+makedepends=(cmake python-numpy python-setuptools mesa eigen hdf5 lapacke qt5-base vtk glew ant java-environment pugixml openmpi fmt
+             'java-environment=11')
 makedepends_x86_64=(cudnn)
 optdepends=('opencv-samples: samples'
             'vtk: for the viz module'
@@ -24,20 +25,20 @@ optdepends=('opencv-samples: samples'
             'java-runtime: Java interface')
 source=(https://github.com/opencv/opencv/archive/$pkgver/$pkgname-$pkgver.tar.gz
         https://github.com/opencv/opencv_contrib/archive/$pkgver/opencv_contrib-$pkgver.tar.gz
-        vtk9.patch
-        ffmpeg5.patch)
+        vtk9.patch)
 sha256sums=('a1cfdcf6619387ca9e232687504da996aaa9f7b5689986b8331ec02cb61d28ad'
             'a97c2eaecf7a23c6dbd119a609c6d7fae903e5f9ff5f1fe678933e01c67a6c11'
-            'f35a2d4ea0d6212c7798659e59eda2cb0b5bc858360f7ce9c696c77d3029668e'
-            'b6459e0456da49d4b9e83b6ed859b144db64b1e1b150718fcee433fa19babdbe')
+            'f35a2d4ea0d6212c7798659e59eda2cb0b5bc858360f7ce9c696c77d3029668e')
 
 prepare() {
   patch -d $pkgname-$pkgver -p1 < vtk9.patch # Don't require all vtk optdepends
-  patch -d $pkgname-$pkgver -p1 < ffmpeg5.patch # FFmpeg 5, patch from berolinux https://github.com/opencv/opencv/issues/21455
 }
 
 build() {
-  export JAVA_HOME="/usr/lib/jvm/default"
+  export ANT_HOME="/usr/share/ant"
+  export JAVA_HOME="/usr/lib/jvm/java-11-openjdk"
+  export PATH=${PATH}:${JAVA_HOME}/bin
+  export PKG_CONFIG_PATH=/usr/lib/ffmpeg4.4/pkgconfig
   # cmake's FindLAPACK doesn't add cblas to LAPACK_LIBRARIES, so we need to specify them manually
   _opts="-DWITH_OPENCL=ON \
          -DWITH_OPENGL=ON \
