* update typescript to 4.6.4-1

--- a/nodejs/typescript/PKGBUILD
+++ b/nodejs/typescript/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Bruno Galeotti <bgaleotti at gmail dot com>
 
 pkgname=typescript
-pkgver=4.5.4
+pkgver=4.6.4
 pkgrel=1
 pkgdesc="TypeScript is a language for application scale JavaScript development"
-arch=('any')
+arch=(any)
 url="http://typescriptlang.org/"
 license=('Apache')
 depends=('nodejs')
 makedepends=('npm')
 source=(https://registry.npmjs.org/$pkgname/-/$pkgname-$pkgver.tgz)
 noextract=($pkgname-$pkgver.tgz)
-sha512sums=('56062cd80d90211b86a61b73155eda40976e2768327d39639e02f38e97d6f45a18645eb1bb0d56d2f5bd82108a2df716ac21712bcd42486440bd2d699f87c852')
+sha512sums=('f626bf8d61c811ba38f477e3acb19f29b652b96a3d8933305cef826b7a51b12a5bb0c6dceff214f0d29d09955144169f54f1a7a097852fbe9938003ce08f5f12')
 
 package() {
   npm install -g --prefix "$pkgdir"/usr "$srcdir"/$pkgname-$pkgver.tgz
