--- a/nodejs/uglify-js/PKGBUILD
+++ b/nodejs/uglify-js/PKGBUILD
@@ -3,10 +3,10 @@
 # Contributor: Daniel Nagy <danielnagy at gmx de>
 
 pkgname=uglify-js
-pkgver=3.14.5
+pkgver=3.15.4
 pkgrel=1
 pkgdesc="JavaScript parser, mangler/compressor and beautifier toolkit"
-arch=('any')
+arch=(any)
 url='http://lisperator.net/uglifyjs'
 license=('BSD')
 depends=('nodejs')
@@ -14,7 +14,7 @@ makedepends=('npm')
 install=${pkgname}.install
 source=(https://registry.npmjs.org/$pkgname/-/$pkgname-$pkgver.tgz)
 noextract=($pkgname-$pkgver.tgz)
-sha512sums=('a99ba4a12c4e1b4bab513be3736111313700cbe062161df07960247aeacbc23ac26daef7a681e61b7137e9712377f246ba4333c132fbb82c598807b18fca69bd')
+sha512sums=('bcc38f183baf5de70fb37e15ef8a832a4e2227f48de2f2f73b0ff6de2c5a7c4358bedacdbed6dc8147ae8137141911ac385ff97d4f3f35848be47c9bde5d4e24')
 
 package() {
   npm install -g --prefix "$pkgdir"/usr "$srcdir"/$pkgname-$pkgver.tgz
