--- a/nodejs/ts-node/PKGBUILD
+++ b/nodejs/ts-node/PKGBUILD
@@ -3,17 +3,17 @@
 # Contributor: Bruno Galeotti <bgaleotti at gmail dot com>
 
 pkgname=ts-node
-pkgver=10.4.0
+pkgver=10.7.0
 pkgrel=1
 pkgdesc="TypeScript execution and REPL for node.js, with source map support"
-arch=('any')
+arch=(any)
 url="https://github.com/TypeStrong/ts-node"
 license=('MIT')
 depends=('nodejs' 'typescript')
 makedepends=('npm')
 source=(https://registry.npmjs.org/$pkgname/-/$pkgname-$pkgver.tgz)
 noextract=($pkgname-$pkgver.tgz)
-sha512sums=('8341653efbc25d220ed490c5e92db7d8fe633d8a819112fdaa5cbcd5980039253baf0234b2da610a077690b882ad4f438d00ab24c584a9c3528d02f4dace9df0')
+sha512sums=('4db2064b8c602685f68b7768e35eca49a7a9d6e4405bf2eef9600bd9da031c2d03eae9a68e2ad5397539ffb6a2668b5b439a75669f6d3fb53a718840d0eeccf0')
 
 package() {
   npm install -g --prefix "$pkgdir"/usr "$srcdir"/$pkgname-$pkgver.tgz
