* update aria2 to 1.36.0-1

--- a/aria2/PKGBUILD
+++ b/aria2/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=aria2
 pkgver=1.36.0
 pkgrel=1
 pkgdesc='Download utility that supports HTTP(S), FTP, BitTorrent, and Metalink'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='http://aria2.sourceforge.net/'
 license=('GPL')
 depends=('gnutls' 'libxml2' 'sqlite' 'c-ares' 'ca-certificates' 'libssh2')
