* update libpeas to 1.32.0-1

--- a/libpeas/PKGBUILD
+++ b/libpeas/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.32.0
 pkgrel=1
 pkgdesc="A GObject plugins library"
 url="https://wiki.gnome.org/Projects/Libpeas"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(gtk3 gobject-introspection-runtime)
 makedepends=(python-gobject glade gobject-introspection git meson vala gi-docgen)
