* update vimb to 3.6.0-2

--- a/vimb/PKGBUILD
+++ b/vimb/PKGBUILD
@@ -1,3 +1,4 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Maxime Gauduin <alucryd@archlinux.org>
 # Contributor: Robert Timm <mail@rtti.de>
 # Contributor: Jason Ryan <jasonwryan@gmail.com>
@@ -5,7 +6,7 @@
 
 pkgname=vimb
 pkgver=3.6.0
-pkgrel=1.1
+pkgrel=2
 pkgdesc='The vim like browser'
 arch=(x86_64 powerpc64le powerpc)
 url=https://fanglingsu.github.io/vimb/
