--- a/python/rst2pdf/PKGBUILD
+++ b/python/rst2pdf/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=rst2pdf
 pkgver=0.99
-pkgrel=1
+pkgrel=2
 pkgdesc="Use a text editor. Make a PDF"
 arch=(any)
 url="https://github.com/rst2pdf/rst2pdf"
@@ -28,6 +28,7 @@ checkdepends=(
 optdepends=(
   'plantuml: for UML diagram support'
   'python-aafigure: for ASCII image support'
+  'python-pyphen: for hyphenation support'
   'python-matplotlib: for math support'
   'python-sphinx: for sphinx support'
   'python-svglib: for SVG support'
