--- a/opensubdiv/PKGBUILD
+++ b/opensubdiv/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
 pkgname=opensubdiv
 pkgver=3.4.4
-pkgrel=4
+pkgrel=10
 pkgdesc="An Open-Source subdivision surface library"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://graphics.pixar.com/opensubdiv"
 license=('APACHE')
 depends=('ptex' 'intel-tbb' 'libxcursor' 'xorg-xrandr' 'libxinerama')
@@ -12,16 +12,20 @@ makedepends=('cmake' 'doxygen' 'glfw' 'glew' 'python' 'python-pygments' 'python-
 makedepends_x86_64=('cuda')
 source=("https://github.com/PixarAnimationStudios/OpenSubdiv/archive/v${pkgver//./_}.tar.gz"
         python3.patch
-        cuda11.patch)
+        cuda11.patch
+        opensubdiv-tbb2021.patch::https://github.com/PixarAnimationStudios/OpenSubdiv/commit/9079a517.patch)
 sha512sums=('fc8f28b79347015c8991150535c1339e695d96947c72fadd4fa27b546a0813c1125cd175ee03bed5aacdb3609f74c4e526ef70103d1195ba9f7df041e73ea9fb'
             '10f1f63e07d59deb4d91ba04448bb360efff0e41202bb6737caffbce09ba244efb349fe25b24880420b80fdadb268aed84923464af0d66ee1a36e4ba8f96cfd5'
-            'e67d270496b56f6337698ee7bd9f1a0c945e75cd963e5f9dd451414c92c12382525190d691de269d783cffebed0b0dae5bd8fd94e555d7bb94ae06034edc375f')
+            '9006762976c15a57d30607189d52d0e620b5024da478dcd41a79a88b350740144a88c1a4f455bfb1b79a9f605e0587c1c828a9b0813301acec8bbb516c2bb292'
+            'c65770d3e65a63c88aa1061e10c5dd6be8616a2479bd5f6d3928c97a5895cfa7d0aac455121db7ee610b9731bfbf07c3f8a26e9cd47623cd1baa046d9aa68cdf')
+options=(!lto)
 
 prepare() {
   cd "OpenSubdiv-${pkgver//./_}"
 
   patch -Np1 -i "${srcdir}"/python3.patch
   patch -Np1 -i "${srcdir}"/cuda11.patch
+  patch -Np1 -i "${srcdir}"/opensubdiv-tbb2021.patch # Support TBB 2021
   mkdir build
 }
 
@@ -31,11 +35,14 @@ build() {
   # wtf
   mkdir -p CMakeFiles/osd_static_gpu.dir/osd
 
+  case "${CARCH}" in
+    x86_64) CUDA_ARGS="-DOSD_CUDA_NVCC_FLAGS='--gpu-architecture=compute_53' -DCUDA_HOST_COMPILER=/usr/bin/g++"
+
+  esac
+
   cmake .. \
       -DCMAKE_BUILD_TYPE=Release \
-      -DCUDA_HOST_COMPILER=/usr/bin/g++-10 \
-      -DCMAKE_INSTALL_PREFIX=/usr
-
+      -DCMAKE_INSTALL_PREFIX=/usr ${CUDA_ARGS}
   make
 }
 
