--- a/inkscape/PKGBUILD
+++ b/inkscape/PKGBUILD
@@ -4,9 +4,9 @@
 # Contributor: tobias <tobias@archlinux.org>
 
 pkgname=inkscape
-pkgver=1.1.1
-_tag='3bf5ae0d25c673abe152dedf4789a2d6f0cc60ff' # git rev-parse INKSCAPE_${pkgver/./_}
-pkgrel=7
+pkgver=1.1.2
+_tag='0a00cf5339ab09436cbe123d22e98fb791619733' # git rev-parse INKSCAPE_${pkgver/./_}
+pkgrel=2
 pkgdesc='Professional vector graphics editor'
 url='https://inkscape.org/'
 license=('GPL' 'LGPL')
@@ -44,15 +44,12 @@ optdepends=(
 )
 
 #source=("https://media.inkscape.org/dl/resources/file/${pkgname}-${pkgver}.tar.bz2")
-source=("git+https://gitlab.com/inkscape/inkscape.git#tag=${_tag}")
-sha256sums=('SKIP')
+source=("git+https://gitlab.com/inkscape/inkscape.git#tag=${_tag}"
+        poppler-22.03.0.patch)
+sha256sums=('SKIP'
+            'cc4910d8db7ae40f280e144fd575fe921e781771e02776570371709e3d3ed42a')
 
 _backports=(
-  # Fix build with poppler 21.11.0
-  '5724c21b9cb7b6176a7b36ca24068b148c817e82'
-
-  # Remove mandatory break from end of paragraphs, added in Pango 1.49.
-  'b3dabef2245d4e4e977ee9d6776be9a134493515'
 )
 
 prepare() {
@@ -65,6 +62,8 @@ prepare() {
 		git log --oneline -1 "${_c}"
 		git cherry-pick -n "${_c}"
 	done
+
+	patch -Np1 -i ../poppler-22.03.0.patch
 }
 
 build() {
