--- a/ocaml/dune/PKGBUILD
+++ b/ocaml/dune/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakob Gahde <j5lx@fmail.co.uk>
 
 pkgname=dune
-pkgver=3.0.1
+pkgver=3.1.1
 pkgrel=1
 pkgdesc="A composable build system for OCaml (formerly jbuilder)"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -12,12 +12,16 @@ url="https://github.com/ocaml/dune"
 license=(Apache)
 depends=('glibc' 'ocaml>=4.13.1' 'ocaml-csexp' 'ocaml-pp')
 source=("${url}/archive/${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha512sums=('94c5975b9afef75727b537805e54850156e92f04b3cd8a1cc07e43f543c6b4642cd416ef827fc106c4b6f775cac074e603850a900a28fd357db7904956138840')
+sha512sums=('3a99a66c449f9e6bf12bb21d2d6871f4d34677a8c0c63e47b3687e2af3d8c62ab4ab62809c5885f2d61a1ed93a88f90cadc0f8db0c95442410c0a964892bd3b8')
 
 _dune_release_pkgs=('dune' 'dune-action-plugin' 'dune-build-info' 'dune-configurator' 'dune-glob' 'dune-private-libs' 'dune-site' 'dyn' 'stdune' 'ordering' 'xdg' 'fiber')
 
 build() {
     cd "${srcdir}/${pkgname}-${pkgver}"
+
+    # FS#74061
+    ./configure --libdir /usr/lib/ocaml
+
     make dune.exe  # this runs `ocaml bootstrap.ml`, but keeps upstream's choice
 
     # dune build needs a comma separated list of packages
