--- a/qt6/qt6-base/PKGBUILD
+++ b/qt6/qt6-base/PKGBUILD
@@ -4,9 +4,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-base
-_qtver=6.2.4
+_qtver=6.3.0
 pkgver=${_qtver/-/}
-pkgrel=2
+pkgrel=3
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
@@ -30,15 +30,18 @@ groups=(qt6)
 options=(debug)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz
+        qtbug-102177.patch::https://code.qt.io/cgit/qt/qtbase.git/patch/?id=94751cbf
         qmake-cflags.patch
         qmake-config.patch)
-sha256sums=('d9924d6fd4fa5f8e24458c87f73ef3dfc1e7c9b877a5407c040d89e6736e2634'
+sha256sums=('b865aae43357f792b3b0a162899d9bf6a1393a55c4e5e4ede5316b157b1a0f99'
+            'cc71e75acbda998a1f8f25ad3abe380886eef34899063344ead4df6a46efbcc9'
             '5411edbe215c24b30448fac69bd0ba7c882f545e8cf05027b2b6e2227abc5e78'
             '4abc22150fa3e06b2fdcec32146abc9be4e316692aa4d5bd5aa53b4b726783fa')
 
 prepare() {
   patch -d $_pkgfn -p1 < qmake-cflags.patch # Use system CFLAGS
   patch -d $_pkgfn -p1 < qmake-config.patch # Don't strip binaries with qmake and use -ltcg, cf. QTBUG-73834
+  patch -d $_pkgfn -p1 < qtbug-102177.patch # Fix crashes in QtCreator
 }
 
 build() {
