--- a/java/gradle/PKGBUILD
+++ b/java/gradle/PKGBUILD
@@ -1,44 +1,24 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
-# Contributor: Simon Legner <Simon.Legner@gmail.com>
-# Contributor: Chris Molozian (novabyte) <chris DOT molozian AT gmail DOT com>
-# Contributor: Sanjuro Makabe (itti) <vuck AT gmx DOT de>
 
-pkgbase=gradle
-pkgname=('gradle' 'gradle-doc' 'gradle-src')
-pkgver=6.7
+pkgname=gradle
+pkgver=7.4.2
 pkgrel=1
 pkgdesc='Powerful build system for the JVM'
 url='https://gradle.org/'
-arch=('any')
+arch=(any)
 license=('Apache')
-depends=('java-environment' 'bash')
-makedepends=('git' 'gradle' 'asciidoc' 'xmlto' 'kotlin' 'groovy' 'java-environment=11')
-source=(https://services.gradle.org/distributions/${pkgbase}-${pkgver}-src.zip
-        ${pkgbase}.sh)
-sha256sums=('8f71632ff5c8a62df309edc106dabb6a24608073193bc96da04135d1dfb967f9'
-            '6f3472486278252417af49196847ba465b56819d286658fcdf918687f89ee032')
-sha512sums=('74d8000bc09ff8523e3bf9232ea0bbc8303df6118fd97c941fcc218c7b3e8a854981d5f4ca99ea7d3ba3e868e9ad6b49641c0727ddb71d890fcc1576e23590ec'
+depends=('java-environment' 'bash' 'which' 'coreutils' 'findutils' 'sed')
+makedepends=('unzip')
+source=(https://downloads.gradle-dn.com/distributions/${pkgname}-${pkgver}-bin.zip
+        ${pkgname}.sh)
+sha512sums=('47803a7139e779f97eeb87f35f5980eb57040535861f746bf9efeffa7d1dd98ae3b3296d1d180444e21eadcdbeac748dc493ae9a2cff552a5629455bbbaa9074'
             'a50b6cf8281b56b80f55a20ac9316e1eed6887da1d191ad575dec140c9819711644d7077c4dc693b8cb0f1b08ceba0033ba88b5ad138d33ffb73b786c0d4bf81')
 
-build() {
-  cd ${pkgbase}-${pkgver}
-  # requires java language level 6, which >=13 has dropped
-  export PATH="/usr/lib/jvm/java-11-openjdk/bin:${PATH}"
-  ./gradlew installAll \
-    -PfinalRelease=true \
-    -Pgradle_installPath="$(pwd)/dist"
-}
-
-package_gradle() {
-  cd ${pkgbase}-${pkgver}/dist
-  optdepends=(
-    'gradle-doc: gradle documentation'
-    'gradle-src: gradle sources'
-  )
+package() {
+  cd ${pkgname}-${pkgver}/
 
   # install profile.d script
-  install -Dm 755 "${srcdir}/${pkgbase}.sh" "${pkgdir}/etc/profile.d/${pkgbase}.sh"
+  install -Dm 755 "${srcdir}/${pkgname}.sh" "${pkgdir}/etc/profile.d/${pkgname}.sh"
 
   # create the necessary directory structure
   install -d "${pkgdir}/usr/share/java/${pkgname}/bin"
@@ -57,24 +37,6 @@ package_gradle() {
 
   # link gradle script to /usr/bin
   ln -s /usr/share/java/${pkgname}/bin/${pkgname} "${pkgdir}/usr/bin"
-}
-
-package_gradle-doc() {
-  pkgdesc+=' (documentation)'
-  options=('!strip')
-
-  cd ${pkgbase}-${pkgver}/dist
-  install -d "${pkgdir}/usr/share/java/gradle/docs"
-  cp -r docs/* "${pkgdir}/usr/share/java/gradle/docs"
-}
-
-package_gradle-src() {
-  pkgdesc+=' (sources)'
-  options=('!strip')
-
-  cd ${pkgbase}-${pkgver}/dist
-  install -d "${pkgdir}/usr/share/java/gradle/src"
-  cp -r src/* "${pkgdir}/usr/share/java/gradle/src"
 }
 
 # vim: ts=2 sw=2 et:
