--- a/gnome/epiphany/PKGBUILD
+++ b/gnome/epiphany/PKGBUILD
@@ -3,38 +3,38 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=epiphany
-pkgver=40.3
+pkgver=42.2
 pkgrel=1
 pkgdesc="A GNOME web browser based on the WebKit rendering engine"
 url="https://wiki.gnome.org/Apps/Web"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL)
-depends=(webkit2gtk gcr icu libdazzle libhandy libportal libarchive)
+depends=(webkit2gtk-4.1 gcr icu libdazzle libhandy libarchive libportal-gtk3)
 makedepends=(docbook-xml startup-notification lsb-release gobject-introspection
              yelp-tools git meson)
 checkdepends=(xorg-server-xvfb aspell hspell hunspell nuspell libvoikko)
 groups=(gnome)
-_commit=39ea7a27f3dc7f6c45095dcb73ce82e78dc0a4b2  # tags/40.3^0
+options=(debug)
+_commit=8dd7d3e2fa3cab3c85865e60a649aa859ff499db  # tags/42.2^0
 source=("git+https://gitlab.gnome.org/GNOME/epiphany.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
-  cd $pkgname
-  git describe --tags | sed 's/-/+/g'
+  cd epiphany
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
-  cd $pkgname
+  cd epiphany
 }
 
 build() {
-  arch-meson $pkgname build
+  arch-meson epiphany build -D soup2=disabled
   meson compile -C build
 }
 
 check() {
-  dbus-run-session xvfb-run \
-    -s '-screen 0 1920x1080x24 -nolisten local' \
+  dbus-run-session xvfb-run -s '-nolisten local' \
     meson test -C build --print-errorlogs
 }
 
