--- a/games/freeciv/PKGBUILD
+++ b/games/freeciv/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Eric Bélanger <eric@archlinux.org>
 
 pkgname=freeciv
-pkgver=2.6.6
+pkgver=3.0.1
 pkgrel=1
 pkgdesc="A multiuser clone of the famous Microprose game of Civilization"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -11,8 +11,8 @@ license=('GPL')
 depends=('gtk3' 'sdl_mixer' 'lua53' 'sqlite' 'curl')
 makedepends=('python')
 backup=('etc/freeciv/database.lua')
-source=(https://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.bz2)
-sha1sums=('e6995a58c30f16fb6f7225e40542fa4ebc73a248')
+source=(https://downloads.sourceforge.net/sourceforge/${pkgname}/${pkgname}-${pkgver}.tar.xz)
+sha1sums=('decc0b8b89d4a539a4303c8064a38e04258cadbc')
 
 build() {
   cd ${pkgname}-${pkgver}
