--- a/qt6/qt6-5compat/PKGBUILD
+++ b/qt6/qt6-5compat/PKGBUILD
@@ -4,9 +4,9 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-5compat
-_qtver=6.2.4
+_qtver=6.3.0
 pkgver=${_qtver/-/}
-pkgrel=1
+pkgrel=2
 arch=(x86_64 powerpc64le riscv64)
 url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
@@ -16,9 +16,9 @@ makedepends=(cmake ninja qt6-declarative)
 optdepends=('qt6-declarative: for QtGraphicalEffects')
 groups=(qt6)
 options=(debug)
-_pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
+_pkgfn=${pkgname/6-/}-everywhere-src-$_qtver
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('5de2b9e25bf7de161fbb88ecdd468ed1788bc899392fc05ed80aa590ebb352fa')
+sha256sums=('2b199be780c50d9214512b922d94cb240b0412fd63f459e356b76102cad1713e')
 
 build() {
   cmake -B build -S $_pkgfn -G Ninja
