--- a/k8s/cni-plugins/PKGBUILD
+++ b/k8s/cni-plugins/PKGBUILD
@@ -1,21 +1,23 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Morten Linderud <foxboron@archlinux.org>
+# Maintainer: David Runge <dvzrv@archlinux.org>
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
-# Contributor: David Runge <dvzrv@archlinux.org>
 
 pkgname=cni-plugins
-pkgver=1.0.0
+pkgver=1.1.1
 pkgrel=1
 pkgdesc='Some standard networking plugins, maintained by the CNI team'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 url="https://github.com/containernetworking/plugins"
 license=(Apache)
 depends=(glibc)
 makedepends=(go)
-options=('emptydirs')
-source=($pkgname-$pkgver.tar.gz::$url/archive/v${pkgver}.tar.gz)
-sha512sums=('daf820bc0ce0278e0dd5782f29b5302c880ab6cbbe2dc0b043948ab2c8213e63374914fa85a74edcbc89d1632006a92bf7b1ba004defbd6a6df3dcecfdefdfb3')
-b2sums=('fc7aa5de40610ebe9dc821f3043a35018d693f9cc9d0e46899f0feca7e3a2d5e6eb95a9638484074ba56b8b56e41c5b85c0b2b12b63910afd0f349ee8041b734')
+provides=(container-network-stack)
+# unable to build with LTO: https://github.com/containernetworking/plugins/issues/706
+options=(!lto)
+source=($pkgname-$pkgver.tar.gz::$url/archive/v$pkgver.tar.gz)
+sha512sums=('03da31caee5f9595abf65d4a551984b995bc18c5e97409549f08997c5a6a2b41a8950144f8a5b4f810cb401ddbe312232d2be76ec977acf8108eb490786b1817')
+b2sums=('2fd70260995e423d2b4ac3a8d2135074baffe5d36177d5e1e5a9ce146f6d2ecfeb3b843de62e43f863085ff965be4160cf5f4cae892d3c59070ef390409ef3c9')
 
 build() {
   cd plugins-$pkgver
@@ -30,14 +32,11 @@ build() {
 package() {
   cd plugins-$pkgver
   install -vDm755 bin/* -t "$pkgdir/usr/lib/cni/"
-  install -vdm755 "${pkgdir}/etc/cni/net.d/"
-  install -vDm644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname/"
-  install -dm755 "$pkgdir/opt/cni/bin"
-
-  install -vDm644 plugins/ipam/dhcp/systemd/* -t "$pkgdir/usr/lib/systemd/system/"
-
-  # Some CNI stuff would build their binaries into /usr/lib/cni with the
-  # old approach. This is unfortunate so we'll just symlink each binary
-  # instead.
+  # some applications would build their own versions of CNI plugins in
+  # /opt/cni/bin if they are not found (as non-symlink files), so we have to
+  # install them twice... ;_;
   install -vDm755 bin/* -t "$pkgdir/opt/cni/bin/"
+  install -vdm755 "$pkgdir/etc/cni/net.d/"
+  install -vDm644 LICENSE -t "$pkgdir/usr/share/licenses/$pkgname/"
+  install -vDm644 plugins/ipam/dhcp/systemd/* -t "$pkgdir/usr/lib/systemd/system/"
 }
