--- a/libnetfilter_cttimeout/PKGBUILD
+++ b/libnetfilter_cttimeout/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=libnetfilter_cttimeout
 pkgver=1.0.0
 pkgrel=6
 pkgdesc='Library for the connection tracking timeout infrastructure'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.netfilter.org/projects/libnetfilter_cttimeout/'
 license=('GPL2')
 depends=('libmnl')
