--- a/libnetfilter_cthelper/PKGBUILD
+++ b/libnetfilter_cthelper/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=libnetfilter_cthelper
 pkgver=1.0.0
 pkgrel=4
 pkgdesc='Library for the connection tracking helper infrastructure'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.netfilter.org/projects/libnetfilter_cthelper/'
 license=('GPL2')
 depends=('libmnl')
