--- a/conntrack-tools/PKGBUILD
+++ b/conntrack-tools/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=conntrack-tools
 pkgver=1.4.6
 pkgrel=2
 pkgdesc='Userspace tools to interact with the Netfilter connection tracking system'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.netfilter.org/projects/conntrack-tools/'
 license=('GPL2')
 makedepends=('systemd' 'libtirpc')
