* update minikube to 1.25.2-1

--- a/k8s/minikube/PKGBUILD
+++ b/k8s/minikube/PKGBUILD
@@ -1,26 +1,23 @@
-# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Christian Rebischke <chris.rebischke@archlinux.org>
 # Contributor: Ivan Shapovalov <intelfx@intelfx.name>
 
 pkgname=minikube
-pkgver=1.22.0
-_minikube_commit=a03fbcf166e6f74ef224d4a63be4277d017bb62e
+pkgver=1.25.2
+_minikube_commit=362d5fdc0a3dbee389b3d3f1034e8023e72bd3a7
 pkgrel=1
 pkgdesc="A tool that makes it easy to run Kubernetes locally"
 url="https://github.com/kubernetes/minikube"
 license=('Apache')
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 optdepends=(
   'kubectl: to manage the cluster'
-)
-optdepends_x86_64=(
   'virtualbox: to use --vm-driver=virtualbox'
 )
 makedepends=('git' 'go' 'go-bindata')
 depends=('glibc')
 source=("git+https://github.com/kubernetes/minikube.git#commit=${_minikube_commit}")
 sha512sums=('SKIP')
-changelog=CHANGELOG.md
+options=('!lto')
 
 prepare() {
   rm -rf "$srcdir/src"
@@ -29,11 +26,12 @@ prepare() {
   export GOPATH="$srcdir"
   cd "$GOPATH/src/k8s.io/minikube"
   sed -i '/^MINIKUBE_LDFLAGS/ s/$/ -linkmode=external/' Makefile
-
-  mkdir -p ${srcdir}/.tmp
 }
 
 build() {
+  mkdir ${srcdir}/.tmp
+  export TMPDIR=${srcdir}/.tmp
+
   export GOPATH="$srcdir"
   cd "$GOPATH/src/k8s.io/minikube"
   export CGO_CPPFLAGS="${CPPFLAGS}"
@@ -41,7 +39,6 @@ build() {
   export CGO_CXXFLAGS="${CXXFLAGS}"
   export CGO_LDFLAGS="${LDFLAGS}"
   export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw -ldflags=-linkmode=external"
-  export TMPDIR=${srcdir}/.tmp
   make
 }
 
