* update minikube to 1.25.2-1

--- a/k8s/minikube/PKGBUILD
+++ b/k8s/minikube/PKGBUILD
@@ -38,6 +38,7 @@ build() {
   export CGO_CFLAGS="${CFLAGS}"
   export CGO_CXXFLAGS="${CXXFLAGS}"
   export CGO_LDFLAGS="${LDFLAGS}"
+  export GOPROXY=https://goproxy.io,direct
   export GOFLAGS="-buildmode=pie -trimpath -mod=readonly -modcacherw -ldflags=-linkmode=external"
   make
 }
