--- a/debootstrap/PKGBUILD
+++ b/debootstrap/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=debootstrap
-pkgver=1.0.124
+pkgver=1.0.126
 pkgrel=1
 pkgdesc="Bootstrap a basic Debian system"
-arch=('any')
+arch=(any)
 license=('GPL')
 url="https://tracker.debian.org/pkg/debootstrap"
 depends=('perl' 'wget' 'binutils')
@@ -14,7 +14,7 @@ source=(https://salsa.debian.org/installer-team/debootstrap/-/archive/$pkgver/de
 optdepends=('gnupg: check release signatures'
             'debian-archive-keyring: check release signatures for Debian'
             'ubuntu-keyring: check release signatures for Ubuntu')
-sha512sums=('654155d9431283168fa765af5676a9d21ce9fcd2a0e2bd644c5cfb13647b0ea2b18f511ea4a8a9624c4c00e3f55f0c76f3c7921893e91e7574fb8e850e64b9d8'
+sha512sums=('4851be46698c4e63c4c29d19a4d4e636fbb4c9aa46d1da04524d95a889b5062e216506bb33ef06875a5c5743bac115bd5323daf236783b85b066b2dc11d9b3ca'
             'd70a9d096d1692f71970cc818515bd783a6031bfe2d2857134eabf6fd36e4137152ebafa8e2d4ae7c8cb442c8532cd4192715b286e38b4d947b0b467e9ed54a5')
 
 prepare() {
