--- a/sdl2/PKGBUILD
+++ b/sdl2/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 pkgname=sdl2
 pkgver=2.0.22
-pkgrel=1
+pkgrel=2.1
 pkgdesc="A library for portable low-level access to a video framebuffer, audio output, mouse, and keyboard (Version 2)"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.libsdl.org"
@@ -23,11 +23,17 @@ validpgpkeys=('1528635D8053A57F77D1E08630A59377A7763BE6') # Sam Lantinga
 
 build() {
   CFLAGS+=" -ffat-lto-objects"
+
+  case "${CARCH}" in
+    # altivec support cannot handle little endian
+    powerpc64le) _cmake_options=(-DSDL_ALTIVEC=OFF) ;;
+  esac
+
   cmake -S SDL2-${pkgver} -B build -G Ninja \
     -D CMAKE_INSTALL_PREFIX=/usr \
     -D SDL_STATIC=OFF \
     -D SDL_DLOPEN=ON \
-    -D SDL_RPATH=OFF
+    -D SDL_RPATH=OFF ${_cmake_options[@]}
   cmake --build build
 }
 
