* update glibc to 2.35-5

--- a/glibc/PKGBUILD
+++ b/glibc/PKGBUILD
@@ -13,7 +13,7 @@ pkgname=(glibc)
 pkgver=2.35
 _commit=28ea43f8d64f0dd1f2de75525157730e1532e600
 pkgrel=5
-arch=(x86_64 powerpc64le powerpc) # riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.gnu.org/software/libc'
 license=(GPL LGPL)
 makedepends=(git gd python)
