* update binutils to 2.38-5.1

--- a/binutils/PKGBUILD
+++ b/binutils/PKGBUILD
@@ -29,7 +29,7 @@ source=(git+https://sourceware.org/git/binutils-gdb.git#commit=$_commit
         ppc-pagesize.patch)
 sha256sums=('SKIP'
             '2d430b66f84a19c154725ec535280c493be1d34f1a90f95208dce02fecd0e4e4'
-            '6c095f62d3bdf9d150f2b9dea3caf5d672140333760de598fdbec216c22e4be9'
+            '940ba1bcf495a5790aef47cc47dee4c62c9fb401f16b7e0fd115cd441819d8a5'
             'e28fa1537cc4bc3732d1a56e04b564c0f91120c7629f65722eb3bd582ff072b0')
 validpgpkeys=(3A24BC1E8FB409FA9F14371813FCEF89DD9E3C4F)
 
@@ -51,8 +51,7 @@ prepare() {
   # riscv64: PR28733, add missing extension info to 'unrecognized opcode' error
   patch -Np1 -i "${srcdir}"/binutils-pr28733.patch
 
-
-  patch -Np1 -i "${srcdir}"/ppc-pagesize.patch
+  #patch -Np1 -i "${srcdir}"/ppc-pagesize.patch
 }
 
 build() {
