* update broadcom-wl-dkms to 6.30.223.271-31

--- a/broadcom-wl-dkms/dkms.conf.in
+++ b/broadcom-wl-dkms/dkms.conf.in
@@ -13,4 +13,5 @@ PATCH[7]="008-linux415.patch"
 PATCH[8]="010-linux56.patch"
 PATCH[9]="011-linux59.patch"
 PATCH[10]="012-linux517.patch"
+PATCH[11]="013-linux518.patch"
 AUTOINSTALL="yes"
