--- a/docbook-sgml31/PKGBUILD
+++ b/docbook-sgml31/PKGBUILD
@@ -6,9 +6,9 @@
 
 pkgname=docbook-sgml31
 pkgver=3.1
-pkgrel=4
+pkgrel=5
 pkgdesc="Legacy docbook-sgml"
-arch=('any')
+arch=(any)
 url='https://www.docbook.org/sgml/'
 license=('MIT')
 depends=('sgml-common')
