--- a/hunspell/PKGBUILD
+++ b/hunspell/PKGBUILD
@@ -1,20 +1,30 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Andreas Radke <andyrtr@archlinux.org>
 # Contributor: Hussam Al-Tayeb <ht990332@gmail.com>
+
 pkgname=hunspell
 pkgver=1.7.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Spell checker and morphological analyzer library and program"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://hunspell.github.io/"
 license=('GPL' 'LGPL' 'MPL')
 depends=('gcc-libs' 'readline')
 optdepends=('perl: for ispellaff2myspell')
-source=($pkgname-$pkgver.tar.gz::https://github.com/hunspell/hunspell/archive/v${pkgver}.tar.gz)
-sha256sums=('bb27b86eb910a8285407cf3ca33b62643a02798cf2eef468c0a74f6c3ee6bc8a')
+source=($pkgname-$pkgver.tar.gz::https://github.com/hunspell/hunspell/archive/v${pkgver}.tar.gz
+	hunspell_buildfix.diff::https://github.com/hunspell/hunspell/commit/2f9e34d13312dbf705f7e1316ca364be13640e6c.patch
+	hunspell_buildfix2.diff::https://patch-diff.githubusercontent.com/raw/hunspell/hunspell/pull/762.patch)
+sha256sums=('bb27b86eb910a8285407cf3ca33b62643a02798cf2eef468c0a74f6c3ee6bc8a'
+            'SKIP'
+            'SKIP')
 
 prepare() {
   cd hunspell-$pkgver
+
+  # build fix
+  patch -Np1 -i ../hunspell_buildfix.diff
+  patch -Np1 -i ../hunspell_buildfix2.diff
+
   autoreconf -vfi
 }
 
@@ -22,6 +32,7 @@ build() {
   cd hunspell-$pkgver
   ./configure --prefix=/usr --disable-static \
 	--with-ui --with-readline # --with-experimental breaks build in this release
+  sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0/g' libtool
   make
 }
 
@@ -35,7 +46,7 @@ package() {
   make DESTDIR="$pkgdir" install
   
   # add generic hunspell.so for development and projects not using pkgconfig flags - FS#30592
-  pushd $pkgdir/usr/lib
+  pushd "$pkgdir"/usr/lib
   ln -s libhunspell-?.?.so libhunspell.so
   popd
 }
