* update jansson to 2.14-2

--- a/jansson/PKGBUILD
+++ b/jansson/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=jansson
 pkgver=2.14
-pkgrel=1
+pkgrel=2
 pkgdesc='C library for encoding, decoding and manipulating JSON data'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.digip.org/jansson/'
@@ -18,6 +18,7 @@ validpgpkeys=('B5D6953E6D5059ED7ADA0F2FD3657D24D058434C') # Petri Lehtinen <petr
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
+  CFLAGS+=' -ffat-lto-objects' \
   ./configure --prefix=/usr
   make
 }
