* update docbook-sgml to 4.5-8

--- a/docbook-sgml/PKGBUILD
+++ b/docbook-sgml/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=docbook-sgml
 pkgver=4.5
-pkgrel=7
+pkgrel=8
 pkgdesc='Document type definitions for verification of SGML data files against the DocBook rule set.'
-arch=('any')
+arch=(any)
 url='https://www.docbook.org/sgml/'
 license=('MIT')
 depends=('sgml-common')
