* update ijs to 0.35-4

--- a/ijs/PKGBUILD
+++ b/ijs/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=ijs
 pkgver=0.35
-pkgrel=3
+pkgrel=4
 pkgdesc="a library which implements a protocol for transmission of raster page images"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.openprinting.org/download/ijs/"
@@ -16,7 +16,7 @@ md5sums=('896fdcb7a01c586ba6eb81398ea3f6e9')
 build() {
 	cd "$pkgname-$pkgver"
 	./configure --prefix=/usr \
-	  --build=$CHOST \
+          --build=$CHOST \
           --disable-static \
           --enable-shared \
           --mandir=/usr/share/man
@@ -27,5 +27,5 @@ package() {
 	cd "$pkgname-$pkgver"
 	make DESTDIR="$pkgdir/" install
         # install doc
-        install -Dm644 ijs_spec.pdf ${pkgdir}/usr/share/doc/$pkgname/ijs_spec.pdf
+        install -Dm644 ijs_spec.pdf "${pkgdir}"/usr/share/doc/$pkgname/ijs_spec.pdf
 }
