--- a/gmp/PKGBUILD
+++ b/gmp/PKGBUILD
@@ -4,16 +4,17 @@
 
 pkgname=gmp
 pkgver=6.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc='A free library for arbitrary precision arithmetic'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gmplib.org/'
-#depends=(gcc-libs sh)
+depends=(gcc-libs sh)
 license=(LGPL3 GPL)
 source=(https://gmplib.org/download/gmp/gmp-$pkgver.tar.lz{,.sig})
 md5sums=('03a31d8cbaf29d136252f8f38875ed82'
          'SKIP')
 validpgpkeys=('343C2FF0FBEE5EC2EDBEF399F3599FF828C67298')   # Niels Möller
+options=(debug)
 
 build() {
   cd $pkgname-$pkgver
