--- a/libpagemaker/PKGBUILD
+++ b/libpagemaker/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=libpagemaker
 pkgver=0.0.4
-pkgrel=2
+pkgrel=3
 pkgdesc="a library that parses the file format of Aldus/Adobe PageMaker documents"
 arch=(x86_64 powerpc64le)
 url="https://wiki.documentfoundation.org/DLP/Libraries/libpagemaker"
@@ -23,7 +23,7 @@ prepare() {
 
 build() {
   cd ${pkgname}-${pkgver}
-  ./configure --prefix=/usr --disable-werror
+  ./configure --prefix=/usr
   make
 }
 
